fix(product): fix docs
